PP index mobile, tablet

--- a/source/index.html
+++ b/source/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HTML Academy: Мишка</title>
+  <link rel="preload" href="fonts/open_sans_regular.woff2" as="font" />
+  <link rel="preload" href="fonts/open_sans_bold.woff2" as="font" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/favicon_32.svg" type="image/svg+xml">
-  <link rel="preload" href="fonts/open_sans_regular.woff2" as="font" />
-  <link rel="preload" href="fonts/open_sans_bold.woff2" as="font" />
   <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png" />
   <script defer src="js/script.js"></script>
 </head>
@@ -68,7 +68,7 @@
       <h1 class="visually-hidden">Мишка - милые штуки ручной работы для дома.</h1>
       <section class="hero">
         <div class="hero__container hero__container--index">
-          <h2 class="hero__title hero-title title">Милые штуки ручной работы для дома</h2>
+          <h2 class="hero__title hero-title title">Милые штуки ручной работы&nbsp;для дома</h2>
           <div class="hero__type type-products">
             <a class="type-products__link type-products__link--interior hero-link link" href="catalog.html">
               <p class="hero-link__title hero-link__title--interior title hero-link-title"><span
@@ -90,15 +90,15 @@
               ручная работа. Доступны в шести расцветках и трёх размерах.</p>
             <table class="week-product__table">
               <tbody class="week-product-table">
-                <tr class="week-product-table__rows">
+                <tr class="week-product-table__rows week-product-table__rows--color">
                   <td class="week-product-table__description">Цвет:</td>
                   <td class="week-product-table__description">тиффани/серый</td>
                 </tr>
-                <tr class="week-product-table__rows">
+                <tr class="week-product-table__rows week-product-table__rows--diameter">
                   <td class="week-product-table__description">Диаметр:</td>
                   <td class="week-product-table__description">25 см</td>
                 </tr>
-                <tr class="week-product-table__rows">
+                <tr class="week-product-table__rows week-product-table__rows--height">
                   <td class="week-product-table__description">Высота:</td>
                   <td class="week-product-table__description">15 см</td>
                 </tr>
@@ -127,7 +127,7 @@
             <div class="week-product__container week-product__container--secondary">
               <p class="week-product__description description week-product__description--price">
                 Цена: 990 руб.</p>
-              <button class="week-product__button transparent-button"><span
+              <button class="week-product__button transparent-button transparent-button--week-product"><span
                   class="transparent-button____description">Заказать</span></button>
             </div>
           </div>
@@ -155,7 +155,7 @@
             <li class="about-us__item about-us-item about-us__item--thread">
               <p
                 class="about-us-item__desicription about-us-item-desicription about-us-item__desicription--thread description">
-                Связано вручную с любовью и умилением</p>
+                Связано вручную с&nbsp;любовью и умилением</p>
             </li>
             <li class="about-us__item about-us-item about-us__item--support">
               <p
@@ -165,7 +165,7 @@
             <li class="about-us__item about-us-item about-us__item--gift">
               <p
                 class="about-us-item__desicription about-us-item-desicription about-us-item__desicription--gift description">
-                Поставляется в подарочной упаковке</p>
+                Поставляется в&nbsp;подарочной упаковке</p>
             </li>
           </ul>
         </div>
@@ -177,8 +177,8 @@
             <ul class="slider__list list slider-list">
               <li class="slider__item slider__item--current">
                 <p class="slider__description slider-description description">Я молодая мама, но всё равно фотографии не
-                  набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В отчаянии, я накупила
-                  аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше
+                  набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я накупила
+                  аксессуаров и игрушек в Мишке, и&nbsp;мои фотографии сразу стали более стильными, а также набирают больше
                   лайков!
                 </p>
                 <p class="slider__author slider-author">Анастасия Красильникова <span
@@ -198,14 +198,15 @@
               <button type="button" class="slider-buttons__button slider-buttons__button--next"></button>
             </div>
           </div>
-          <a class="reviews__link transparent-button link" href="#"><span
+          <a class="reviews__link transparent-button transparent-button--reviews  link" href="#"><span
               class="transparent-button____description">Написать</span></a>
         </div>
       </section>
       <section class="contacts">
+        <div class="contacts__container contacts__container--main">
         <div class="contacts__wrapper wrapper">
           <h2 class="contacts__title title contacts-title">Контакты</h2>
-          <div class="contacts__container">
+          <div class="contacts__container contacts__container--adress">
             <div class="contacts__mail contacts-mail">
               <span class="contacts-mail__title">e-mail:</span>
               <a class="contacts-mail__link link mail-link" href="mailto:info@mimimishkashop.ru"> <span
@@ -246,9 +247,10 @@
             </picture>
           </noscript>
         </div>
-        <a class="contacts__button transparent-button link" href="feedback.html"> <span
+        <a class="contacts__button transparent-button transparent-button--contacts link" href="feedback.html"> <span
             class="transparent-button__description">Напишите
             нам</span></a>
+          </div>
       </section>
     </main>
     <!-- Подвал -->
