--- a/source/index.html
+++ b/source/index.html
@@ -177,8 +177,10 @@
             <ul class="slider__list list slider-list">
               <li class="slider__item slider__item--current">
                 <p class="slider__description slider-description description">Я молодая мама, но всё равно фотографии не
-                  набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я накупила
-                  аксессуаров и игрушек в Мишке, и&nbsp;мои фотографии сразу стали более стильными, а также набирают больше
+                  набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я
+                  накупила
+                  аксессуаров и игрушек в Мишке, и&nbsp;мои фотографии сразу стали более стильными, а также набирают
+                  больше
                   лайков!
                 </p>
                 <p class="slider__author slider-author">Анастасия Красильникова <span
@@ -204,53 +206,53 @@
       </section>
       <section class="contacts">
         <div class="contacts__container contacts__container--main">
-        <div class="contacts__wrapper wrapper">
-          <h2 class="contacts__title title contacts-title">Контакты</h2>
-          <div class="contacts__container contacts__container--adress">
-            <div class="contacts__mail contacts-mail">
-              <span class="contacts-mail__title">e-mail:</span>
-              <a class="contacts-mail__link link mail-link" href="mailto:info@mimimishkashop.ru"> <span
-                  class="mail-link__text">info@mimimishkashop.ru</span></a>
-            </div>
-            <div class="contacts__adress contacts-adress">
-              <span class="contacts-adress__title">адрес:</span>
-              <span class="contacts-adress__description">г. Санкт-Петербург<br>ул. Большая Конюшенная<br>д. 19/8, офис
-                101</span>
+          <div class="contacts__wrapper wrapper">
+            <h2 class="contacts__title title contacts-title">Контакты</h2>
+            <div class="contacts__container contacts__container--adress">
+              <div class="contacts__mail contacts-mail">
+                <span class="contacts-mail__title">e-mail:</span>
+                <a class="contacts-mail__link link mail-link" href="mailto:info@mimimishkashop.ru"> <span
+                    class="mail-link__text">info@mimimishkashop.ru</span></a>
+              </div>
+              <div class="contacts__adress contacts-adress">
+                <span class="contacts-adress__title">адрес:</span>
+                <span class="contacts-adress__description">г. Санкт-Петербург<br>ул. Большая Конюшенная<br>д. 19/8, офис
+                  101</span>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="contacts__location location">
-          <iframe title="Карта." class="location__map location__map--nojs"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037876728603!2d30.32047247715258!3d59.93871647491512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x62740c0ffcd8a91f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsIDEwMSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MTE4Ng!5e0!3m2!1sru!2sru!4v1698738594279!5m2!1sru!2sru"
-            width="320" height="455" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-          <noscript>
-            <picture>
-              <source media="(min-width: 1150px)"
-                srcset="img/location/location_desktop.webp, img/location/location_desktop@2x.webp 2x" width="527"
-                height="457" type="image/webp">
-              <source media="(min-width: 1150px)"
-                srcset="img/location/location_desktop.jpg, img/location/location_desktop@2x.jpg 2x" width="527"
-                height="457" type="image/jpg">
-              <source media="(min-width: 768px)"
-                srcset="img/location/location_tablet.webp, img/location/location_tablet@2x.webp 2x" width="768"
-                height="457" type="image/webp">
-              <source media="(min-width: 768px)"
-                srcset="img/location/location_tablet.jpg, img/location/location_tablet@2x.jpg 2x" width="768"
-                height="457" type="image/jpg">
-              <source media="(min-width: 320px)"
-                srcset="img/location/location_mobile.webp, img/location/location_mobile@2x.webp 2x" width="320"
-                height="455" type="image/webp">
-              <img class="location__map" loading="lazy" src="img/location/location_mobile.jpg"
-                srcset="img/location/location_mobile@2x.jpg" width="320" height="455"
-                alt="Расположение на карте города.">
-            </picture>
-          </noscript>
-        </div>
-        <a class="contacts__button transparent-button transparent-button--contacts link" href="feedback.html"> <span
-            class="transparent-button__description">Напишите
-            нам</span></a>
+          <div class="contacts__location location">
+            <iframe title="Карта." class="location__map location__map--nojs"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037876728603!2d30.32047247715258!3d59.93871647491512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x62740c0ffcd8a91f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsIDEwMSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MTE4Ng!5e0!3m2!1sru!2sru!4v1698738594279!5m2!1sru!2sru"
+              width="320" height="455" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <noscript>
+              <picture>
+                <source media="(min-width: 1150px)"
+                  srcset="img/location/location_desktop.webp, img/location/location_desktop@2x.webp 2x" width="527"
+                  height="457" type="image/webp">
+                <source media="(min-width: 1150px)"
+                  srcset="img/location/location_desktop.jpg, img/location/location_desktop@2x.jpg 2x" width="527"
+                  height="457" type="image/jpg">
+                <source media="(min-width: 768px)"
+                  srcset="img/location/location_tablet.webp, img/location/location_tablet@2x.webp 2x" width="768"
+                  height="457" type="image/webp">
+                <source media="(min-width: 768px)"
+                  srcset="img/location/location_tablet.jpg, img/location/location_tablet@2x.jpg 2x" width="768"
+                  height="457" type="image/jpg">
+                <source media="(min-width: 320px)"
+                  srcset="img/location/location_mobile.webp, img/location/location_mobile@2x.webp 2x" width="320"
+                  height="455" type="image/webp">
+                <img class="location__map" loading="lazy" src="img/location/location_mobile.jpg"
+                  srcset="img/location/location_mobile@2x.jpg" width="320" height="455"
+                  alt="Расположение на карте города.">
+              </picture>
+            </noscript>
           </div>
+          <a class="contacts__button transparent-button transparent-button--contacts link" href="feedback.html"> <span
+              class="transparent-button__description">Напишите
+              нам</span></a>
+        </div>
       </section>
     </main>
     <!-- Подвал -->
