--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png" />
-  <script defer src="js/script.js"></script>
+  <script defer src="js/script _form.js"></script>
 </head>
 
 <body class="page__body">
