--- a/source/form.html
+++ b/source/form.html
@@ -72,7 +72,7 @@
         </div>
         <p class="hero__description description wrapper">Мы будем рады воплотить в жизнь ваши пожелания! Заполните
           простую
-          форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+          форму заказа и мы свяжемся&nbsp;с&nbsp;вами, чтобы уточнить детали.</p>
       </section>
       <section class="knitting">
         <h2 class="visually-hidden">Форма для заполнения</h2>
