--- a/source/form.html
+++ b/source/form.html
@@ -70,9 +70,8 @@
         <div class="hero__container hero__container--notindex">
           <h2 class="hero__title hero__title--form hero-title title">Вязание на заказ</h2>
         </div>
-        <p class="hero__description description wrapper">Мы будем рады воплотить в жизнь ваши пожелания! Заполните
-          простую
-          форму заказа и мы свяжемся&nbsp;с&nbsp;вами, чтобы уточнить детали.</p>
+        <p class="hero__description description wrapper">Мы будем рады воплотить в жизнь ваши пожелания!
+          Заполните&nbsp;простую форму заказа и мы свяжемся&nbsp;с&nbsp;вами, чтобы уточнить детали.</p>
       </section>
       <section class="knitting">
         <h2 class="visually-hidden">Форма для заполнения</h2>
@@ -185,7 +184,7 @@
               <h3 class="add__title legend title">Доп</h3>
               <label class="add__label label" for="add">
                 <span class="visually-hidden">Напишите свои пожелания</span>
-                <textarea class="add__input" rows="7" id="add" name="add"
+                <textarea class="add__input" rows="6" id="add" name="add"
                   placeholder="Опишите все ваши пожелания к заказу"></textarea>
               </label>
             </div>
@@ -265,7 +264,7 @@
           </li>
         </ul>
         <a class="main-footer__copyright-link link copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="copyright-link__description description">Разработано</span>
+          <span class="copyright-link__description copyright-link__description--form description">Разработано</span>
           <svg class="copyright-link__logo" aria-hidden="true" focusable="false" width="36" height="36"
             viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
