catalog tablet desktop

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -142,7 +142,7 @@
                 </a>
                 <div class="catalog-item__container catalog-description">
                   <div class="catalog-description__container catalog-description__container--title">
-                    <h3 class="catalog-item__title catalog-title title">
+                    <h3 class="catalog-item__title catalog-item__title--underwear catalog-title title">
                       <a class="catalog-title__link link" href="#">Корзинка для белья</a>
                     </h3>
                     <p class="catalog-item__description description">Диаметр 15 см, высота 10 см</p>
@@ -182,7 +182,7 @@
                 </a>
                 <div class="catalog-item__container catalog-description">
                   <div class="catalog-description__container catalog-description__container--title">
-                    <h3 class="catalog-item__title catalog-title title">
+                    <h3 class="catalog-item__title catalog-item__title--toyscart catalog-title title">
                       <a class="catalog-title__link link" href="#">Большая корзинка для игрушек</a>
                     </h3>
                     <p class="catalog-item__description description">Диаметр 30 см, высота 30 см</p>
@@ -230,8 +230,7 @@
           <div class="production__container production__container--description">
             <span class="production__title production__title--tablet title">Процесс производства</span>
             <p class="production__description description">По просьбам наших любимых фолловеров мы сняли для вас
-              подробное
-              видео о том, как появляются наши товары.</p>
+              подробное видео о&nbsp;том, как появляются наши товары.</p>
             <button class="production__button transparent-button"><span class="transparent-button__description">сделать
                 заказ</span></button>
           </div>
