--- a/source/index.html
+++ b/source/index.html
@@ -196,8 +196,8 @@
               </li>
             </ul>
             <div class="reviews__buttons slider-buttons">
-              <button type="button" class="slider-buttons__button slider-buttons__button--previous"></button>
-              <button type="button" class="slider-buttons__button slider-buttons__button--next"></button>
+              <button type="button" class="slider-buttons__button slider-buttons__button--previous"><span class="visually-hidden">Предыдущий отзыв</span></button>
+              <button type="button" class="slider-buttons__button slider-buttons__button--next"><span class="visually-hidden">Следующий отзыв</span></button>
             </div>
           </div>
           <a class="reviews__link transparent-button transparent-button--reviews  link" href="#"><span
