--- a/source/form.html
+++ b/source/form.html
@@ -6,13 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HTML Academy: Мишка. Вязание на заказ</title>
   <link rel="preload" href="fonts/open_sans_regular.woff2" as="font" />
-  <link rel="preload" href="fonts/open_sans_bold.woff2" as="font" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png" />
-  <script defer src="js/script _form.js"></script>
+  <script defer src="js/script_form.js"></script>
 </head>
 
 <body class="page__body">
@@ -67,7 +66,7 @@
     <main class="main-container">
       <h1 class="visually-hidden">Мишка - Вязание на заказ.</h1>
       <section class="hero">
-        <div class="hero__container hero__container--notindex">
+        <div class="hero__container hero__container--notindex hero__container--form">
           <h2 class="hero__title hero__title--form hero-title title">Вязание на заказ</h2>
         </div>
         <p class="hero__description description wrapper">Мы будем рады воплотить в жизнь ваши пожелания!
