--- a/source/catalog.html
+++ b/source/catalog.html
@@ -108,8 +108,8 @@
                   </div>
                   <div class="catalog-description__container catalog-description__container--cart">
                     <span class="catalog-item__price">1 200 руб.</span>
-                    <button class="catalog-item__button cart-button" type="button" aria-label="Добавить в корзину"><span
-                        class="cart-button__icon"></span></button>
+                    <a class="catalog-item__button cart-button link" href="#" aria-label="Добавить в корзину"><span
+                        class="cart-button__icon"></span></a>
                   </div>
                 </div>
               </div>
@@ -148,8 +148,8 @@
                   </div>
                   <div class="catalog-description__container catalog-description__container--cart">
                     <span class="catalog-item__price">690 руб.</span>
-                    <button class="catalog-item__button cart-button" type="button"><span class="cart-button__icon"
-                        aria-label="Добавить в корзину"></span></button>
+                    <a class="catalog-item__button cart-button link" href="#" aria-label="Добавить в корзину"><span
+                        class="cart-button__icon"></span></a>
                   </div>
                 </div>
               </div>
@@ -188,8 +188,8 @@
                   </div>
                   <div class="catalog-description__container catalog-description__container--cart">
                     <span class="catalog-item__price">1 500 руб.</span>
-                    <button class="catalog-item__button cart-button" type="button" aria-label="Добавить в корзину"><span
-                        class="cart-button__icon"></span></button>
+                    <a class="catalog-item__button cart-button link" href="#" aria-label="Добавить в корзину"><span
+                        class="cart-button__icon"></span></a>
                   </div>
                 </div>
               </div>
@@ -323,20 +323,20 @@
             <legend class="visually-hidden">Выбрать размер</legend>
             <ul class="size__list list">
               <li class="size__item">
-                <label class="size__label" for="small">
+                <label class="size__label" for="small" aria-label="Малый">
                   <input class="size__input input visually-hidden" type="radio" id="small" value="small" name="size"
                     checked>
                   <span class="size__description"><span class="size__text">s</span></span>
                 </label>
               </li>
               <li class="size__item">
-                <label class="size__label" for="medium">
+                <label class="size__label" for="medium" aria-label="Между малым и средним">
                   <input class="size__input input visually-hidden" type="radio" id="medium" value="medium" name="size">
                   <span class="size__description"><span class="size__text">m</span></span>
                 </label>
               </li>
               <li class="size__item">
-                <label class="size__label" for="large">
+                <label class="size__label" for="large" aria-label="Средний">
                   <input class="size__input input visually-hidden" type="radio" id="large" value="large" name="size">
                   <span class="size__description"><span class="size__text">l</span></span>
                 </label>
