--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,9 +39,9 @@
           <div class="main-nav__list list main-nav__list--close main-nav__list--noscript nav-list">
             <div class="nav-list__secondary list-secondary">
               <div class="list-secondary__header">
-                <a class="main-nav__link main-nav__link--catalog main-nav__link--secondary link"
+                <a class="main-nav__link main-nav__link--catalog main-nav__link--secondary main-nav__link--top link"
                   href="catalog.html">Каталог товаров</a>
-                <a class="main-nav__link main-nav__link--order main-nav__link--secondary link" href="form.html">Вязание
+                <a class="main-nav__link main-nav__link--order main-nav__link--secondary main-nav__link--top link" href="form.html">Вязание
                   на заказ</a>
               </div>
               <div class="list-secondary__hero">
